 information)

##############
v 2.6
##############

user-visible CHANGES:
+ title changed to title style / capitalization
+ introduced dropZeroDensity argument to ML estimators 
+ arguments panel.first, panel.last for plot-methods can now be lists
+ introduced returnlevelplot, a generalization of the respective
  diagnostic plot facility of package ismev
  
GENERAL ENHANCEMENTS:

under the hood:
+ zero dropping (see argument 'dropZeroDensity' above)
  --Optimizers like optim require finite values, so get problems when 
  negative loglikelihood is evaluated, so optionally, and by default,
  values with density/likelihood 0 are dropped from optimization
+ removed ::: internal dependencies (within distr-Fam of pkgs) by copying 
  respective routines
+ qqplot:
   * (already there for a while) gains ability to interchange x- and y-
      axis by argument 'datax' for compatibility with other qqplots 
   * gains new methods for object of class "Estimate" (which could also be 
     seen as "fitted" objects...)
   * additional argument added.points.CI to allow for  additional evaluation 
     points for the confidence intervals in the range of the seen data	 
   * now by default has datax = TRUE
   * fixed issue with labeling
   * issues with datax fixed
+ returnlevelplot
   * similar as qqplot as to additional methods
   * returnlevelplot now gains an argument threshold for POT
   * set datax argument in case it is missing in returnlevelplot ...	  
   * issues with datax fixed
+ new internal method  .checkEstClassForParamFamily-method to be called 
  immediately before returning an Estimate object (in functions Estimator(), 
  MCEstimator(), MDEstimator(), MLEstimator()); this allows to return an
  object of S4 class specific to the resp. parametric family (by means of
  S4 method dispatch); this is used in pkg 'RobExtremes' to produce, e.g., 
  objects of class "GEVMCEstimate", i.e. which inherit from both 
  "MCEstimate" and "GEVEstimate", so that a diag-method for 