@@ -24,7 +24,7 @@ qqplot(x, y, ...)
     with.legend = TRUE, legend.bg = "white",
     legend.pos = "topleft", legend.cex = 0.8, 
     legend.pref = "", legend.postf = "",  legend.alpha = alpha.CI,
-    debug = FALSE)
+    debug = FALSE, withSubst = TRUE)
 \S4method{qqplot}{ANY,ProbFamily}(x, y,
    n = length(x), withIdLine = TRUE, withConf = TRUE,
    withConf.pw  = withConf,  withConf.sim = withConf,
@@ -120,6 +120,8 @@ in \code{support(y)}?}
 \item{legend.postf}{character to be appended to legend text}
 \item{legend.alpha}{nominal coverage probability}
 \item{debug}{logical; if \code{TRUE} additional output to debug confidence bounds.}
+\item{withSubst}{logical; if \code{TRUE} (default) pattern substitution for
+      titles and axis lables is used; otherwise no substitution is used. }
 }
 \description{
   We generalize function \code{\link[stats:qqnorm]{qqplot}} from package \pkg{stats} to
@@ -131,6 +133,13 @@ in \code{support(y)}?}
    it can use an argument \code{ParamFamily} to conclude on the model
    distribution. Graphical parameters may be given as arguments to
    \code{qqplot}.
+  In all title and label arguments, if \code{withSubst} is \code{TRUE},
+  the following patterns are substituted:
+\describe{
+\item{\code{"\%C"}}{class of argument \code{x}}
+\item{\code{"\%A"}}{deparsed argument \code{x}}
+\item{\code{"\%D"}}{time/date-string when the plot was generated}
+}
 }
 \value{
     As for function \code{\link[stats:qqnorm]{qqplot}} from package \pkg{stats}: a
